# Ai-Report--Formatter

./: .gitignore  CHANGELOG.md  render.yaml  示例markdown.md
.github/workflows/: release-desktop.yml  release-github.yml
apps/api/: README.md  export_stats.py  main.py  requirements.txt  schemas.py
apps/formatter/: README.md  app.py  pyproject.toml  requirements.txt
apps/formatter/formatter/: app_logic.py  citations.py  config.py  docx_builder.py  latex.py  markdown_parser.py  pipeline.py  preview.py  ui_config.py
apps/formatter/formatter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: README.md  next.config.ts  package-lock.json  package.json
docs/plans/: 2026-01-30-ai-report-formatter-design.md  2026-01-30-docx-styles-implementation-plan.md  2026-02-01-docx-style-implementation-design.md  2026-02-01-frontend-redesign-design.md  2026-02-01-frontend-redesign-implementation-plan.md  2026-02-01-wrong-question-essay-design.md  2026-02-03-8bit-ui-implementation-plan.md  2026-02-03-docx-formatting-implementation-plan.md  2026-02-03-formatter-hardening-implementation-plan.md  2026-02-03-render-pages-deploy.md  2026-02-03-wave-workbench-frontend.md  2026-02-10-open-source-module-roadmap.md
formatter/: __init__.py
tests/api/: test_export_stats_endpoint.py  test_formatter_import_precedence.py  test_generate_endpoint.py  test_preview_endpoint.py
tests/formatter/: test_app_logic.py  test_citations.py  test_config.py  test_docx_builder.py  test_docx_footer.py  test_docx_styles.py  test_latex.py  test_markdown_parser.py  test_pipeline.py  test_quality.py  (+1 more)
(+21 files in other folders)
